<resources>
    <string name="app_name">Truyencuatui</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Truyện của tui</string>
    <string name="nav_header_subtitle">Xem free không mất phí</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="verifiation">Truy cập Email để xác nhận tài khoản</string>
    <string name="email_error">Email không đúng định dạng</string>

    <string name="menu_login">Đăng nhập</string>
    <string name="menu_register">Đăng ký</string>
    <string name="menu_main">Trang chủ</string>
    <string name="menu_dowloadBook">Truyện đã tải</string>
    <string name="menu_clendarBook">Lịch ra truyện</string>
    <string name="menu_categoryBook">Danh sách truyện</string>
    <string name="menu_newBook">Mới cập nhập</string>
    <string name="menu_hotBook">Truyện hot</string>
    <string name="menu_fullBook">Truyện hoàn thành</string>
    <string name="menu_viewBook">Truyện đọc nhiều</string>
    <string name="menu_13">13</string>
    <string name="menu_18">18+</string>
    <string name="menu_tienhiep">Tiên hiệp</string>
    <string name="menu_kiemhiep">Kiếm hiệp</string>
    <string name="menu_ngontinh">Ngôn tình</string>
    <string name="menu_dothi">Đô thị</string>
    <string name="menu_quantruong">Quan trường</string>
    <string name="menu_vongdu">Võng du</string>
    <string name="menu_khoahuyen">Khoa huyễn</string>
    <string name="menu_huyen">Huyền huyễn</string>
    <string name="menu_digioi">Dị giới</string>
    <string name="menu_lichsu">Lịch sử</string>
    <string name="menu_tay">Phương Tây</string>
    <string name="menu_history">Lịch sử</string>

    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt_email">Nhập Email</string>
    <string name="prompt_password">Nhập mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_re_pass">Nhập lại mật khẩu</string>
    <string name="input_text">Khi đăng ký bạn đã chấp nhận</string>
    <string name="input_term">điều khoản sử dụng</string>
    <string name="note_register">Vui lòng đăng ký với email mà bạn sử dụng để có thể lấy lại mật khẩu</string>

    <string name="title_activity_book"></string>
    <string name="title_newbook">TRUYỆN MỚI</string>
    <string name="title_hotbook">TRUYỆN HOT</string>
    <string name="title_readbook">TRUYỆN XEM NHIỀU</string>
    <string name="title_fullbook">TRUYỆN HOÀN THÀNH</string>
    <string name="title_tienhiep">TIÊN HIỆP</string>
    <string name="title_kiemhiep">KIẾM HIỆP</string>
    <string name="title_ngontinh">NGÔN TÌNH</string>
    <string name="title_quan">QUAN TRƯỜNG</string>
    <string name="title_vong">VÕNG DU</string>
    <string name="title_huyen">HUYỀN HUYỄN</string>
    <string name="title_di">DỊ GIỚI</string>
    <string name="title_lichsu">LỊCH SỬ</string>
    <string name="title_phuongtay">PHƯƠNG TÂY</string>
    <string name="title_dothi">ĐÔ THỊ</string>
    <string name="title_khoahuyen">KHOA HUYỄN</string>
    <string name="title_13">TRUYỆN THIẾU NHI</string>
    <string name="title_18">TRUYỆN NGƯỜI LỚN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_itemsearch">Tìm kiếm</string>
    <string name="menu_item_notify">Thông báo</string>

    <string name="title_activity_read">ReadActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="facebook_app_id">325104468153834</string> <string name="fb_login_protocol_scheme">fb325104468153834</string>

</resources>
